feat: created layout for tictactoe game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <title>TICTACTOE JINLEE</title>
 </head>
 <body>
+    <div class="wrapper">
+        
+
+            <section id="title">
+                <h1>TICTACTOE</h1>
+                <h2>BY: JIN LEE</h2>
+            </section>
+
+            <section id="tictactoe">
+                <section id="info">
+                    <div class="left">
+                        <p class="player">Player 1: </p>
+                        <p class="player">Player 2: </p>
+                    </div>
+                    <div class="right">
+                        <p class="puck">Player 1's Puck: </p>
+                        <p class="puck">Player 2's Puck: </p>
+                    </div>
+                    
+                </section>
+
+                <div class="grid-container">
+                    <div class="grid-item">1</div>
+                    <div class="grid-item">2</div>
+                    <div class="grid-item">3</div>
+                    <div class="grid-item">4</div>
+                    <div class="grid-item">5</div>
+                    <div class="grid-item">6</div>
+                    <div class="grid-item">7</div>
+                    <div class="grid-item">8</div>
+                    <div class="grid-item">9</div>
+                </div>
+            </section>
+    </div>
+
     <script type="module" src="./index.js"></script>
 </body>
 </html>
