--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>TICTACTOE JINLEE</title>
 </head>
 <body>
     <div class="wrapper">
-        
-
             <section id="title">
                 <h1>TICTACTOE</h1>
                 <h2>BY: JIN LEE</h2>
@@ -18,27 +17,27 @@
 
             <section id="tictactoe">
                 <section id="info">
-                    <div class="left">
-                        <p class="player">Player 1: </p>
-                        <p class="player">Player 2: </p>
+                    <div class="players">
+                        <p id="player1">Player 1: </p>
+                        <p id="player2">Player 2: </p>
                     </div>
-                    <div class="right">
-                        <p class="puck">Player 1's Puck: </p>
-                        <p class="puck">Player 2's Puck: </p>
+                    <div class="pucks">
+                        <p>Player 1's Puck: <span id="puck1">O</span></p>
+                        <p>Player 2's Puck: <span id="puck2">X</span></p>
                     </div>
                     
                 </section>
 
                 <div class="grid-container">
-                    <div class="grid-item">1</div>
-                    <div class="grid-item">2</div>
-                    <div class="grid-item">3</div>
-                    <div class="grid-item">4</div>
-                    <div class="grid-item">5</div>
-                    <div class="grid-item">6</div>
-                    <div class="grid-item">7</div>
-                    <div class="grid-item">8</div>
-                    <div class="grid-item">9</div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
+                    <div class="grid-item"></div>
                 </div>
             </section>
     </div>
