feat: fixed bugs and added status after game end

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <section id="tictactoe">
                 <section id="info">
                     <div class="players">
-                        <p id="player1">Player 1: </p>
-                        <p id="player2">Player 2: </p>
+                        <p>Player 1: <span id="player1">Jin</span></p>
+                        <p>Player 2: <span id="player2">YJ</span></p>
                     </div>
                     <div class="pucks">
                         <p>Player 1's Puck: <span id="puck1">O</span></p>
