feat: fixed few bugs and added hover effect to grid items

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                 </section>
 
                 <div class="grid-container">
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
-                    <div class="grid-item"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
+                    <div class="grid-item grid-item-hover"></div>
                 </div>
             </section>
     </div>
