feat: added login page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,27 @@
                 <h2>BY: JIN LEE</h2>
             </section>
 
+            <section id="register">
+                <form id="login" action="">
+                    <div id="textWrap">
+                        <div class="loginWrap">
+                            <label for="PlayerName">Player Name</label>
+                            <input name="PlayerName" type="text">
+                        </div>
+                        <div class="loginWrap">
+                            <label for="PlayerPuck">Player Puck (one character)</label>
+                            <input name="PlayerPuck" type="text">
+                        </div>
+                    </div>
+                    <button>Submit</button>
+                </form>
+            </section>
+
             <section id="tictactoe">
                 <section id="info">
                     <div class="players">
-                        <p>Player 1: <span id="player1">Jin</span></p>
-                        <p>Player 2: <span id="player2">YJ</span></p>
+                        <p>Player 1: <span id="player1"></span></p>
+                        <p>Player 2: <span id="player2"></span></p>
                     </div>
                     <div class="pucks">
                         <p>Player 1's Puck: <span id="puck1">O</span></p>
