feat: added background and changed login interface

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         <p>Player 2: <span id="player2"></span></p>
                     </div>
                     <div class="pucks">
-                        <p>Player 1's Puck: <span id="puck1">O</span></p>
-                        <p>Player 2's Puck: <span id="puck2">X</span></p>
+                        <p>Player 1's Puck: <span id="puck1"></span></p>
+                        <p>Player 2's Puck: <span id="puck2"></span></p>
                     </div>
                     
                 </section>
